more improvements on performance, got subdivide_scan() working on tf with KITTI data. Tried normal tensors and sparse tensors, ultimate decided on ragged

--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -9,67 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "IPython.notebook.set_autosave_interval(180000)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Autosaving every 180 seconds\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from utils import *\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "import tensorflow_probability as tfp\n",
-    "# from tensorflow.python.framework.ops import disable_eager_execution\n",
-    "import time\n",
-    "\n",
     "#need to have these two lines to work on my ancient 1060 3gb\n",
     "#  https://stackoverflow.com/questions/43990046/tensorflow-blas-gemm-launch-failed\n",
-    "# physical_devices = tf.config.list_physical_devices('GPU') \n",
-    "# tf.config.experimental.set_memory_growth(physical_devices[0], True)\n",
-    "\n",
-    "#turn off eager execution\n",
-    "# disable_eager_execution() #no?\n",
+    "physical_devices = tf.config.list_physical_devices('GPU') \n",
+    "for device in physical_devices:\n",
+    "    tf.config.experimental.set_memory_growth(device, True)\n",
+    "from utils import *\n",
+    "import tensorflow_probability as tfp\n",
+    "import time\n",
     "\n",
     "# for auto-reloading external modules\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "%autosave 180\n",
     "# %matplotlib notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tf.config.list_physical_devices('GPU')"
    ]
   },
   {
@@ -133,10 +92,11 @@
     "# f =np.array([200,200,40]) #fidelity in x, y, z #takes ~30s on my dsektop\n",
     "# lim = np.array([-50,50,-50,50,-10,10])\n",
     "\n",
-    "f =np.array([100,100,2]) #fidelity in x, y, z # < 5s\n",
+    "f =np.array([25,25,4]) #fidelity in x, y, z # < 5s\n",
     "lim = np.array([-100,100,-100,100,-10,10])\n",
     "\n",
-    "E = subdivide_scan(cloud,plt1, bounds = lim, fid = f, draw_grid = False, show_pc = False) \n",
+    "for _ in range(3):\n",
+    "    E = subdivide_scan(cloud,plt1, bounds = lim, fid = f, draw_grid = False, show_pc = False) \n",
     "ViewInteractiveWidget(plt1.window)"
    ]
   },
@@ -149,41 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(\n",
-      "[    2     3     4     6    11    12    30    16    45    54    26    12\n",
-      "    66   100   195    95   209   311   221   192    53   743   391   339\n",
-      "   132   519  2583  1167  1103   393   147  2415  8588 10263  4212  1950\n",
-      "   528    79  1313  1476  8507  8902 11260  2302  1484   643   338   752\n",
-      "  5713 11609  4791  1275   326    17   515    77   480  1333  1023  1004\n",
-      "   845   166   121    12     3    53    68    71   401   410   119   349\n",
-      "    39   102   204   136    36     1     8    28    58    27   205   126\n",
-      "     3   259    42   169   138    31     5    33    53    45   173    23\n",
-      "   130    55    37     2   228     2     2    11    12    46    95   169\n",
-      "    65    10     8   216    11    75    94     5    39    37    55     6\n",
-      "    10    10     1     6    14     1     1    43     8     3     8    18\n",
-      "    64    10     6    27    87    18    41    16    27    54    28    49\n",
-      "     1    24    19    67   326    22    33     1   165     1   139    20\n",
-      "   239   279   325    85   511    93   986  1831     2    79   733    52\n",
-      "   775    68   103   566    13    44   973   453     4    82    91   710\n",
-      "   142    28   194   157     6   302    86   174    27   193     4    23\n",
-      "     2    40    34    22    48    68    38   121   199    33    23   106\n",
-      "   118     2   136     4     1    23    21    15    35     3     1    22\n",
-      "   114    17    33   104    46     6    41    11   120   169    17    78\n",
-      "     3     2   215     2    17     1    28    37   103     5   122   155\n",
-      "     1     4   258     9    22   107    17    25    77    66     7    75\n",
-      "    21     2    17], shape=(255,), dtype=int32)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## from vedo import *\n",
     "from utils import *\n",
@@ -204,6 +134,7 @@
     "dataset = pykitti.raw(basedir, date, drive)\n",
     "velo1 = dataset.get_velo(0) # Each scan is a Nx4 array of [x,y,z,reflectance]\n",
     "cloud = velo1[:,:3]\n",
+    "cloud_tensor = tf.convert_to_tensor(cloud, np.float32)\n",
     "# print(tf.shape(cloud))\n",
     "## ------------------------------------------------------------------------------------\n",
     "\n",
@@ -215,10 +146,12 @@
     "# cloud[:,2] += 0.5*cloud[:,1] - 10\n",
     "# #-------------------------------------------------------------------------------------\n",
     "\n",
-    "f = tf.constant([25,25,2]) #fidelity in x, y, z # < 5s\n",
+    "f = tf.constant([25,25,4]) #fidelity in x, y, z # < 5s\n",
     "lim = tf.constant([-100.,100.,-100.,100.,-10.,10.])\n",
     "\n",
-    "E = subdivide_scan_tf(cloud,plt2, bounds = lim, fid = f, draw_grid = False, show_pc = False) \n",
+    "for _ in range(10):\n",
+    "    E = subdivide_scan_tf(cloud,plt2, bounds = lim, fid = f, draw_grid = False, show_pc = False) \n",
+    "#     print(tf.config.experimental.get_memory_info('GPU:0'))\n",
     "# ViewInteractiveWidget(plt2.window)"
    ]
   },
@@ -465,9 +398,9 @@
     "#Goal: given input tensor \"cloud\" and \"bins\" which contains all og and binned coordinates\n",
     "#      subdivide and perform ops on \"cloud\" wihtout using any loops \n",
     "\n",
-    "bins = tf.transpose(tf.constant([[2., 1., 3., 2., 2., 3., 1., 0., 2.],\n",
-    "                                 [0., 1., 0., 0., 0., 3., 1., 0., 0.],\n",
-    "                                 [1., 2., 3., 1., 1., 3., 2., 0., 1.]]))\n",
+    "bins = tf.transpose(tf.constant([[2., 1., 3., 0., 2., 2., 3., 1., 0., 2.],\n",
+    "                                 [0., 1., 0., 0., 0., 0., 3., 1., 0., 0.],\n",
+    "                                 [1., 2., 3., 0., 1., 1., 3., 2., 0., 1.]]))\n",
     "cloud = bins + tf.random.normal(tf.shape(bins))*0.1\n",
     "print(\"binned coordinate values: \\n\", bins)\n",
     "# print(cloud)\n",
@@ -526,6 +459,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### remove zero rows from 3d tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "bins2 = tf.transpose(tf.constant([[[2., 9., 3., 0., 2., 2., 3., 1., 0., 2.], #x\n",
+    "                                  [0., 0., 0., 0., 0., 0., 3., 1., 0., 0.],\n",
+    "                                  [0., 1., 0., 0., 0., 0., 3., 1., 0., 0.],\n",
+    "                                  [1., 2., 3., 0., 1., 1., 3., 2., 0., 1.]], \n",
+    "                                  \n",
+    "                                  [[2., 1., 3., 0., 2., 2., 3., 1., 0., 2.], #y\n",
+    "                                  [0., 0., 0., 0., 0., 0., 3., 1., 0., 0.],\n",
+    "                                  [0., 1., 0., 0., 0., 0., 3., 1., 0., 0.],\n",
+    "                                  [1., 2., 3., 0., 1., 1., 3., 2., 0., 1.]],\n",
+    "                                  \n",
+    "                                  [[2., 1., 3., 1., 2., 2., 3., 1., 0., 2.], #z\n",
+    "                                  [0., 0., 0., 0., 0., 0., 3., 1., 0., 0.],\n",
+    "                                  [0., 1., 0., 0., 0., 0., 3., 1., 0., 0.],\n",
+    "                                  [1., 2., 3., 0., 1., 1., 3., 2., 0., 1.]]]))\n",
+    "\n",
+    "print(bins2[:2])\n",
+    "print(bins2[:,:,0])\n",
+    "#need to AVERAGE point locations PER AXIS, PER BIN\n",
+    "#   Ignore SPECIFIC POINTS where XYZ are ALL ZERO\n",
+    "idx = tf.math.not_equal(bins2[:,:,0], tf.constant([0.,0.,0.]))\n",
+    "print(idx[:2])\n",
+    "mask = tf.where(tf.math.reduce_any(idx, axis = 2) == True)\n",
+    "print(\"\\n mask: \\n\", mask[:6]) #correct(?)\n",
+    "# print(tf.gather(bins,mask))\n",
+    "\n",
+    "nonzero = tf.gather(bins,[0,0,0])\n",
+    "print(\"\\n nonzero elements: \\n\", nonzero)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Generate 2D tensor with all permutations (:n1, :n2, :n3)"
    ]
   },
@@ -535,9 +512,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fida = 4 \n",
-    "fidb = 4\n",
-    "fidc = 4\n",
+    "fida = 100 \n",
+    "fidb = 100\n",
+    "fidc = 20\n",
     "\n",
     "a = tf.linspace(1,fida,fida)[:,None]\n",
     "b = tf.linspace(1,fidb,fidb)[:,None]\n",
@@ -548,7 +525,7 @@
     "ansc = tf.reshape(tf.tile(c, [1,fida*fidb]), [-1,1] )\n",
     "\n",
     "ans = tf.squeeze(tf.transpose(tf.Variable([ansa,ansb,ansc])))\n",
-    "print(ans)\n",
+    "# print(ans)\n",
     "\n",
     "\n"
    ]
