fixed bottleneck for voxel binning

--- a/v2/ICET3D.ipynb
+++ b/v2/ICET3D.ipynb
@@ -9,9 +9,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(180000)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosaving every 180 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf\n",
@@ -23,6 +40,7 @@
     "from utils import *\n",
     "import tensorflow_probability as tfp\n",
     "import time\n",
+    "# from numba import cuda #gpu library used to clear gpu memory after each trial\n",
     "\n",
     "# for auto-reloading external modules\n",
     "%load_ext autoreload\n",
@@ -92,11 +110,11 @@
     "# f =np.array([200,200,40]) #fidelity in x, y, z #takes ~30s on my dsektop\n",
     "# lim = np.array([-50,50,-50,50,-10,10])\n",
     "\n",
-    "f =np.array([25,25,4]) #fidelity in x, y, z # < 5s\n",
+    "f =np.array([50,50,1]) #fidelity in x, y, z # < 5s\n",
     "lim = np.array([-100,100,-100,100,-10,10])\n",
     "\n",
-    "for _ in range(3):\n",
-    "    E = subdivide_scan(cloud,plt1, bounds = lim, fid = f, draw_grid = False, show_pc = False) \n",
+    "for _ in range(1):\n",
+    "    E = subdivide_scan(cloud,plt1, bounds = lim, fid = f, draw_grid = False, show_pc = True) \n",
     "ViewInteractiveWidget(plt1.window)"
    ]
   },
@@ -109,11 +127,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "took 0.005000591278076172 s to get loc\n",
+      "tf.Tensor(\n",
+      "[[26.331928   4.0943737  1.1134745]\n",
+      " [63.19475   19.641125   2.446875 ]\n",
+      " [62.888447  21.277443   2.4540002]\n",
+      " ...\n",
+      " [ 2.6052756 -2.81883   -1.716766 ]\n",
+      " [ 3.7054    -1.5073999 -1.7493999]\n",
+      " [ 3.3721    -1.2917001 -1.5794001]], shape=(2308, 3), dtype=float32)\n",
+      "tf.Tensor(\n",
+      "[[4.6908970e+00 2.9398997e+00 1.7100094e-01]\n",
+      " [2.4206145e-01 3.7690759e-01 4.0264702e-03]\n",
+      " [1.6755944e-01 5.4061711e-01 8.8969078e-03]\n",
+      " ...\n",
+      " [6.1798120e-01 6.5926939e-01 1.4740838e-01]\n",
+      " [1.2391189e-02 1.5308999e-02 5.1211365e-03]\n",
+      " [1.1241766e+00 4.3126819e-01 5.2648789e-01]], shape=(2308, 3), dtype=float32)\n",
+      "took 0.17308545112609863 seconds with tensorflow\n"
+     ]
+    }
+   ],
    "source": [
     "## from vedo import *\n",
     "from utils import *\n",
@@ -121,6 +164,10 @@
     "import os\n",
     "from ipyvtklink.viewer import ViewInteractiveWidget\n",
     "import pykitti\n",
+    "\n",
+    "#bad vibes\n",
+    "# dev = cuda.get_current_device()\n",
+    "# dev.reset()\n",
     "\n",
     "settings.embedWindow(backend='ipyvtk', verbose = True) #was this\n",
     "\n",
@@ -146,11 +193,11 @@
     "# cloud[:,2] += 0.5*cloud[:,1] - 10\n",
     "# #-------------------------------------------------------------------------------------\n",
     "\n",
-    "f = tf.constant([25,25,4]) #fidelity in x, y, z # < 5s\n",
+    "f = tf.constant([100,100,20]) #fidelity in x, y, z # < 5s\n",
     "lim = tf.constant([-100.,100.,-100.,100.,-10.,10.])\n",
     "\n",
-    "for _ in range(10):\n",
-    "    E = subdivide_scan_tf(cloud,plt2, bounds = lim, fid = f, draw_grid = False, show_pc = False) \n",
+    "for _ in range(1):\n",
+    "    E = subdivide_scan_tf(cloud, plt2, bounds = lim, fid = f, draw_grid = False, show_pc = False) \n",
     "#     print(tf.config.experimental.get_memory_info('GPU:0'))\n",
     "# ViewInteractiveWidget(plt2.window)"
    ]
@@ -420,19 +467,19 @@
     "#ans outputs tensor of shape [N,2], where:\n",
     "#  [[voxel number, index of [x,y,z] in cloud that corresponds to bin #],\n",
     "#   [voxel number,index of [x,y,z] in cloud that corresponds to bin #]] ... \n",
-    "ans = tf.where(tf.math.reduce_all(idx, axis = 2) == True)\n",
-    "print(\"ans: \\n\", ans)\n",
+    "loc = tf.where(tf.math.reduce_all(idx, axis = 2) == True)\n",
+    "print(\"\\n loc: \\n\", loc)\n",
     "\n",
     "#Need to \"ungroup\" so that we can fit_gaussian_tf() to each individual voxel...\n",
-    "s = tf.shape(ans)\n",
-    "group_ids, group_idx = tf.unique(ans[:, 0], out_idx=s.dtype)\n",
+    "s = tf.shape(loc)\n",
+    "group_ids, group_idx = tf.unique(loc[:, 0], out_idx=s.dtype)\n",
     "num_groups = tf.reduce_max(group_idx) + 1\n",
     "# print(group_ids, group_idx, num_groups)\n",
     "sizes = tf.math.bincount(group_idx)\n",
     "# print(sizes)\n",
     "\n",
     "#replace <bins> here with <cloud> when done debugging\n",
-    "rag = tf.RaggedTensor.from_row_lengths(tf.gather(cloud, ans[:,1]), sizes) \n",
+    "rag = tf.RaggedTensor.from_row_lengths(tf.gather(cloud, loc[:,1]), sizes) \n",
     "# print(\"ragged: \\n\", rag)\n",
     "\n",
     "#Run on GPU as vectorized operation (WAAAAAY Faster) --\n",
@@ -453,6 +500,40 @@
     "#     sigmas.append(sigma)\n",
     "# print(mus, sigmas)\n",
     "# #------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find \"loc\" more efficiently than using tf.where"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"binned points: \\n\", bins)\n",
+    "print(\"\\nbins to place them: \\n\",q)\n",
+    "\n",
+    "# #SUPER inefficient \n",
+    "# for i in range(tf.shape(bins)[0]):\n",
+    "#     for j in range(tf.shape(q)[0]):\n",
+    "#         if tf.reduce_all(bins[i] == q[j]):\n",
+    "#             print(j,i)\n",
+    "#             try:\n",
+    "#                 loc2 = tf.concat((loc2, tf.constant([[j,i]])), axis = 0)\n",
+    "#             except:\n",
+    "#                 loc2 = tf.constant([[j,i]])\n",
+    "# print(\"\\n loc \\n\",loc2)\n",
+    "# loc2 = None\n",
+    "\n",
+    "testidx = tf.where(bins == q[1])\n",
+    "print(testidx)\n",
+    "    \n",
+    "print(\"\\n goal is to get this: \\n\",loc)"
    ]
   },
   {
@@ -512,22 +593,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fida = 100 \n",
-    "fidb = 100\n",
-    "fidc = 20\n",
+    "fida = 3 \n",
+    "fidb = 3\n",
+    "fidc = 3\n",
     "\n",
-    "a = tf.linspace(1,fida,fida)[:,None]\n",
-    "b = tf.linspace(1,fidb,fidb)[:,None]\n",
-    "c = tf.linspace(1,fidc,fidc)[:,None]\n",
+    "a = tf.linspace(0,fida-1,fida)[:,None]\n",
+    "b = tf.linspace(0,fidb-1,fidb)[:,None]\n",
+    "c = tf.linspace(0,fidc-1,fidc)[:,None]\n",
     "\n",
     "ansa = tf.tile(a, [fidb*fidc, 1])\n",
     "ansb = tf.tile(tf.reshape(tf.tile(b, [1,fida]), [-1,1] ), [(fidc), 1])\n",
     "ansc = tf.reshape(tf.tile(c, [1,fida*fidb]), [-1,1] )\n",
     "\n",
-    "ans = tf.squeeze(tf.transpose(tf.Variable([ansa,ansb,ansc])))\n",
-    "# print(ans)\n",
+    "q = tf.squeeze(tf.transpose(tf.Variable([ansa,ansb,ansc])))\n",
+    "print(q)\n",
     "\n",
-    "\n"
+    "#GOAL- determine which voxel pt belongs in based on its coords\n",
+    "# pt = tf.constant([2,1,0])\n",
+    "pt = bins\n",
+    "print(\"\\n pt:\", pt, \"\\n\")\n",
+    "num = tf.cast( ( pt[:,0] + fida*pt[:,1] + (fida*fidb)*pt[:,2] ), tf.int32)\n",
+    "print(\"\\n\", num, \"\\n\")\n",
+    "# print(q[num])\n",
+    "\n",
+    "ans = tf.concat((num[:,None], tf.cast(tf.linspace(0, tf.shape(pt)[0], tf.shape(pt)[0]  )[:,None],\n",
+    "                                      dtype = tf.int32) ), axis = 1 )\n",
+    "print(ans)\n"
    ]
   },
   {
